test/integration/page-config/pages/invalid/invalid-property.js
// export const config = { amp() {} }

export default () => <p>hello world</p>
